Fixing up some bugs for the demo.

--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -16,13 +16,13 @@
 
 <ul>
 <li>
-Landing Page: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/>
+Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{landing_url}}">{{landing_url}}</a><br/>
 </li>
 <li>
-Analytics: <a href="{% url campaign_analytics chash=campaign.chash %}">{{host}}{% url campaign_analytics chash=campaign.chash %}</a><br/>
+Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{analytics_url}}">{{analytics_url}}</a><br/>
 </li>
 <li>
-Edit: <a href="{% url campaign_update chash=campaign.chash %}">{{host}}{% url campaign_update chash=campaign.chash %}</a><br/>
+Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{update_url}}">{{update_url}}</a><br/>
 </li>
 </ul>
 </div>
