--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -10,13 +10,13 @@
 {% block site-content %}
 
 <div id="create-thanks" class="create">
-<h1>Campaign Created, Thanks..</h1>
+<h1>Promotion Created</h1>
 
 <ul>
-<li>Landing Page: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/></li>
-<li>Analytics: <a href="{% url campaign_analytics chash=campaign.chash %}">{{host}}{% url campaign_analytics chash=campaign.chash %}</a><br/></li>
-<li>Edit: <a href="{% url campaign_update chash=campaign.chash %}">{{host}}{% url campaign_update chash=campaign.chash %}</a><br/></li>
-<li>Admin: <a href="{% url campaign_admin chash=campaign.chash %}">{{host}}{% url campaign_admin chash=campaign.chash %}</a><br/></li>
+<li>Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{landing_url}}">{{landing_url}}</a><br/></li>
+<li>Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{analytics_url}}">{{analytics_url}}</a><br/></li>
+<li>Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{update_url}}">{{update_url}}</a><br/></li>
+<li>Admin: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}">{{admin_url}}</a><br/></li>
 <ul>
 
 </div>
