--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -32,7 +32,7 @@
 
 
 <div id="preview" style="display:none;">
-  <div style="background-color:#ddd;">Preview</div>
+  <div id="preview-sign">Preview Landing Page</div>
     <iframe id="iframe_preview" src ="{{campaign.url}}" width="100%" height="600" scrolling="auto">
        <p>Your browser does not support iframes.</p>
     </iframe>
