--- a/static/css/create.css
+++ b/static/css/create.css
@@ -191,3 +191,18 @@ textarea {
      text-align: center;
       color: #E0E0E0; 
 }
+
+#preview-sign {
+background-color:#ddd;
+padding: 5px 0px 5px 30px;
+border: 1px solid #000;
+width: 97.2%;
+margin: auto;
+margin-top: 50px;
+
+    -moz-border-radius-topleft: 18px;
+    -webkit-border-top-left-radius: 18px;
+    -moz-border-radius-topright: 18px;
+    -webkit-border-top-right-radius: 18px;
+
+}
