Fixing up some ui.

--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -25,9 +25,11 @@
 <BR><BR><BR><BR>
 
 <div id="choose-create-entity" class="create">
-<h1>Create Promotion</h1>	
+<h1>Create Promotion</h1>
+<h4>To Start: Enter URL of product to be promoted below</h4>	
     	 	<input type="text" value="Input product info URL" name="campaign_url" id="campaign_url"></input>
 		<button id="create-button" disabled="true">CREATE</button>
+
 </div>
 
 
