--- a/static/css/create.css
+++ b/static/css/create.css
@@ -108,6 +108,11 @@ div.create h1 {
 		  color: #333;
 }
 
+div.create h4 {
+         color: silver;
+	 font-size: 18px;
+	  margin: -30px 0px 15px 0px;
+}
 
 div#address_map {
 		height: 400px;
