--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -10,13 +10,14 @@
 	<script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}"> </script>
         <script type="text/javascript" src="{% url static 'javascript/jquery.cookie.js' %}" ></script>
         <script type="text/javascript" src="{% url static 'javascript/charCount.js' %}" ></script>
-
+<script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
 
 	<link rel="stylesheet" href="{% url static 'css/calendar-system.css' %}" type="text/css" />
 	<link rel="stylesheet" href="{% url static 'css/calendar-en.css' %}" type="text/css" />
 	<link rel="stylesheet" href="{% url static 'css/jquery.calendar.css' %}" type="text/css" />
 	<link rel="stylesheet" href="{% url static 'css/jquery.ptTimeSelect.css' %}" type="text/css" />	
 	<link type="text/css" href="{% url static 'css/jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />
+<link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
 
    <link rel="stylesheet" href="{% url static 'css/overlay.css' %}" type="text/css" />
  	<link rel="stylesheet" href="{% url static 'css/style.css' %}" type="text/css" />
@@ -37,17 +38,10 @@
 
 
 
-<div id="badge">
-	<div id="greeting">
-		{{campaign.from_name}}'s offer to you and your friends:
-		<div id="status"></div>
-	</div>
-
-	<div id="invite-button-div" onmouseover="$('#invite-button-div').stop().animate({shadow: '0 0 30px #44f'}, 'fast')" onmouseout="$('#invite-button-div').stop().animate({shadow: '3px 3px 10px #000'}, 'fast')" rel="#overlay-blogger-login">
-		<a href="" id="invite_button" rel="#overlay-blogger-login" style="font-size: 22px;color: red;">Share this to get your discount</a>
-	</div>
-
-	<div id="invitemsg">{{campaign.message|upper}}</div>
+<div id="badge" onmouseover="$('#badge').stop().animate({shadow: '0 0 30px #44f'}, 'fast')" onmouseout="$('#badge').stop().animate({shadow: '3px 3px 10px #000'}, 'fast')" rel="#overlay-blogger-login">
+<br/><font style="color: #0074A0;">CLICK HERE </font><br/>
+<font style="font-size: 45px;">Get <b>{{campaign.percent}}% </b>Discount </font><br/>
+<br/><font style="color: black; font-size: 20px;">by telling your friends.</font>
 </div>
 
 <div id="overlay-blogger-login" class="overlay-blogger">
@@ -203,14 +197,15 @@
 </iframe></div>
 
 <script>
+$("#ifra").showLoading({'afterShow': function(){ setTimeout( "jQuery('#ifra').hideLoading()", 5000 );}});         
 
-$("#invite-button-div").click(function(){
-	$("#invite_button").overlay().load();
+$("#badge").click(function(){
+	$("#badge").overlay().load();
 });       
 
 var contentView = 0;
 
-$("#invite_button").overlay({
+$("#badge").overlay({
 	expose: {
 		loadSpeed: 200,
 		color: 'gray',
