Fixing more things.

--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -32,7 +32,7 @@
 
 {% block site-content %}
 
-<h1>{{campaign.title}}</h1>
+<h1><font style="color:#003366;">{{campaign.title}}<font></h1>
 <br /><br /><br />
 
 
