Fixing a bunch of bugs.

--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -54,18 +54,18 @@
 			</li>
 			<li>
 				<label for="promotion_date_start">Promotion Start Date: </label> 
-				<input type="text" name="promotion_date_start" size="12" id="promotion_date_start" value="06/16/2010" class="required" />
+				<input type="text" name="promotion_date_start" size="12" id="promotion_date_start" value="{{start_date_label}}" class="required" />
 				&nbsp;&nbsp;&nbsp;&nbsp;
 				<label for="promotion_time_start">Time: </label> 
-				<input type="text" name="promotion_time_start" size="8" id="promotion_time_start" value="12:30 AM" class="required"/>
+				<input type="text" name="promotion_time_start" size="8" id="promotion_time_start" value="{{start_time_label}}" class="required"/>
 			</li>
 
 			<li>
 				<label for="promotion_date_end">Promotion End Date: </label> 
-				<input type="text" name="promotion_date_end" size="12" id="promotion_date_end" value="06/16/2010" class="required" />
+				<input type="text" name="promotion_date_end" size="12" id="promotion_date_end" value="{{end_date_label}}" class="required" />
 				&nbsp;&nbsp;&nbsp;&nbsp;          
 				<label for="promotion_time_end">Time: </label> 
-                                <input type="text" name="promotion_time_end" size="8" id="promotion_time_end" value="12:30 AM" class="required"/>
+                                <input type="text" name="promotion_time_end" size="8" id="promotion_time_end" value="{{end_time_label}}" class="required"/>
 
 			</li>
 
