--- a/static/css/overlay.css
+++ b/static/css/overlay.css
@@ -153,7 +153,8 @@
 	height: 27px;
 	cursor:pointer;	
 	}
-#code{
+#code
+	text-align: center;{
 	width: 421px;
 	margin-left: 20px;
 	height: 53px;
