--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -27,7 +27,7 @@ Analytics
 		<!-- Top Pic -->
 		<div id="top" class="span-24 last">
 		        <!-- Title -->
-			<div class="span-8"><div id="title">JohnChow.com</div></div>
+			<div class="span-8"><div id="title">{{campaign.title}}</div></div>
 			<div class="span-16 last">
 			     <div id="topSum"><h2>Reached <b>{{total_reach}}</b> people from <b>{{total_shares}}</b> shares</h2></div>			     
 			</div>
@@ -293,7 +293,8 @@ xs		});
 			} else {
 			      var pplTag = "Friends";
 			} 
-			html_str += "<div class=\'t" + pplTag + "\'>" + pplTag + ": <b>"+followers+"</b></div>";
+	                
+			html_str += "<div class=\'tt" + pplTag + "\'>" + pplTag + ": <b>"+followers+"</b></div>";
 			html_str += "<div class=\'shares\'>Number of times shared: <b>"+shares+"</b></div>";
 			html_str += "<div class=\'reshares\'>Number of times reshared by" + pplTag + ": <b>"+reshares+"</b></div>";
 			html_str += "<div class=\'rereshares\'>Total number of shares: <b>"+totalShares+"</b></div>";
