Fixing some more bugs.

--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -26,8 +26,8 @@
 
 <div id="choose-create-entity" class="create">
 <h1>Create Promotion</h1>
-<h4>To Start: Enter URL of product to be promoted below</h4>	
-    	 	<input type="text" value="Input product info URL" name="campaign_url" id="campaign_url"></input>
+<h4><font style="font-weight: bold; font-size: 20px; color: gray;">To Start:</font> Enter a URL for what you would like to promote</h4>	
+    	 	<input type="text" value="URL to be Rippled goes here." name="campaign_url" id="campaign_url"></input>
 		<button id="create-button" disabled="true">CREATE</button>
 
 </div>
