--- a/static/css/2home.css
+++ b/static/css/2home.css
@@ -26,11 +26,11 @@
 }
 #content #badge{
 
-        #-moz-border-radius: 10px;
+        -moz-border-radius: 10px;
 	-webkit-border-radius: 0px 0px 5px 5px;
 	#border: 1px solid #a9a9a9;
 	box-shadow: 0 0 10px #000000;
-	#-moz-box-shadow: 0 0 10px #000000;
+	-moz-box-shadow: 0 0 10px #000000;
 	-webkit-box-shadow: 3px 3px 10px #000000;
 	#position: relative;
 	#margin-left: 6px;
