--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -33,6 +33,7 @@
 {% block site-content %}
 
 <h1><font style="color:#003366;">{{campaign.title}}<font></h1>
+<h2><font style="font-size:25px; padding-left: 200px; color: #000033;"><u>{{campaign.message}}</u></font></h2>
 <br /><br /><br />
 
 
