--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -27,7 +27,7 @@ Analytics
 		<!-- Top Pic -->
 		<div id="top" class="span-24 last">
 		        <!-- Title -->
-			<div class="span-8"><div id="title">{{campaign.title}}</div></div>
+			<div class="span-8"><div id="title">{{campaign.title}}</div></div><br />
 			<div class="span-16 last">
 			     <div id="topSum"><h2>Reached <b>{{total_reach}}</b> people from <b>{{total_shares}}</b> shares</h2></div>			     
 			</div>
