Fixing some text.

--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -51,8 +51,8 @@
 		<div class="overlay-top">
 			<img src="{% url static 'images/step1-msg.png' %}">
 		</div>
-		
-		<div id="pick-msg">{% block custom-message %} To get your discount, share gift with your friends on Facebook or Twitter, choose one:{% endblock %}</div>
+
+		<div id="pick-msg">{% block custom-message %} To get your discount, share this offer with your friends on Facebook or Twitter, Choose one:{% endblock %}</div>
 		<div class="overlay-bot">
 			<div id="previous-grey"><img src="{% url static 'images/previous-grey.png' %}"></div>
 			<div id="invite-progress"><img src="{% url static 'images/step1.png' %}"></div>
