--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -40,9 +40,9 @@
 
 
 <div id="badge" onmouseover="$('#badge').stop().animate({shadow: '0 0 30px #44f'}, 'fast')" onmouseout="$('#badge').stop().animate({shadow: '3px 3px 10px #000'}, 'fast')" rel="#overlay-blogger-login">
-<br/><font style="color: #0074A0;">CLICK HERE </font><br/>
-<font style="font-size: 45px;">Get <b>{{campaign.percent}}% </b>Discount </font><br/>
-<br/><font style="font-size: 27px; font-weight: bold; color: black;">JUST BY</font><font style="color: black; font-size: 20px;"> telling your friends.</font>
+<br/><font style="color: #0074A0; font-size: 34px;">CLICK HERE </font><br/>
+<font style="font-size: 50px;">Get <b>{{campaign.percent}}% </b>Discount </font><br/>
+<br/><font style="font-size: 32px; font-weight: bold; color: black;">JUST BY</font><font style="color: black; font-size: 25px;"> telling your friends.</font>
 </div>
 
 <div id="overlay-blogger-login" class="overlay-blogger">
