Fixing bug in analytics.

--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -13,10 +13,10 @@
 <h1>Promotion Created</h1>
 
 <ul>
-<li>Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{landing_url}}">{{landing_url}}</a><br/></li>
-<li>Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{analytics_url}}">{{analytics_url}}</a><br/></li>
-<li>Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{update_url}}">{{update_url}}</a><br/></li>
-<li>Admin: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}">{{admin_url}}</a><br/></li>
+<li>Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{landing_url}}" target="landing">{{landing_url}}</a><br/></li>
+<li>Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{analytics_url}}" target="analytics">{{analytics_url}}</a><br/></li>
+<li>Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{update_url}}" target="update">{{update_url}}</a><br/></li>
+<li>Admin: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}" target="admin">{{admin_url}}</a><br/></li>
 <ul>
 
 </div>
