Adding targets to admin target urls.

--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -16,13 +16,13 @@
 
 <ul>
 <li>
-Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{landing_url}}">{{landing_url}}</a><br/>
+Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a target="landing" href="{{landing_url}}">{{landing_url}}</a><br/>
 </li>
 <li>
-Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{analytics_url}}">{{analytics_url}}</a><br/>
+Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a target="analytics" href="{{analytics_url}}">{{analytics_url}}</a><br/>
 </li>
 <li>
-Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{update_url}}">{{update_url}}</a><br/>
+Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a target="edit" href="{{update_url}}">{{update_url}}</a><br/>
 </li>
 </ul>
 </div>
