Adding about page.

--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -2,6 +2,9 @@
 
 {% block title %}About{% endblock %}
 
-{% block content %}
-<p>This is About Us.</p>
+{% block site-content %}
+<div style="margin: 100px 0px 0px 100px; width: 90%;">
+<h1>RippleFunction is a proud Capital Factory Company.</h1>
+<img style="margin: auto; " height="70px" src="{% url static '/images/cf_logo.jpg'%}" />
+<div>
 {% endblock %}
