--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -2,8 +2,8 @@
 <div>
 <div id="footer">
   <div id="footer-container">
-		<div id="dets">
-			<a href="#">About</a> &nbsp; 
+		<div id="dets" style="margin-right: 60px;">
+			<a href="{%url about%}">About</a> &nbsp; 
 			<a href="#">Privacy Policy</a>
 		</div>
                <div id="copyright">
