--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -6,7 +6,7 @@ Analytics
 
 {% block  js_css_include %}
 <link rel="stylesheet" href="{% url static 'css/blueprint/screen.css' %}" type="text/css" />
-<link rel="stylesheet" href="{% url static 'css/blueprint/print.css' %}" type="text/css" />	
+
 <!--[if lt IE 8]><link rel="stylesheet" href="{% url static 'css/blueprint/ie.css' %}" type="text/css" /><![endif]-->
 <link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
 
@@ -22,12 +22,12 @@ Analytics
 
 
 
-{%block site-content %}
+{% block site-content %}
 
 		<!-- Top Pic -->
 		<div id="top" class="span-24 last">
 		        <!-- Title -->
-			<div class="span-8"><div id="title">{{campaign.title}}</div></div><br />
+			<div class="span-8"><div id="title">{{campaign.title}}</div></div>
 			<div class="span-16 last">
 			     <div id="topSum"><h2>Reached <b>{{total_reach}}</b> people from <b>{{total_shares}}</b> shares</h2></div>			     
 			</div>
