--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -140,7 +140,8 @@
 			Here’s your discount code:
 			</div>      	
 			
-			<div id="code"><p style="width: 60%; margin: auto;text-align: center; border: 6px outset #0074A0; padding-bottom: 10px; ">{{campaign.code}}</p><br/>&nbsp;&nbsp;&nbsp;Redeem Here: &nbsp;<a href="{{campaign.url}}">{{campaign.url}}</a></div>
+			<div id="code"><p style="width: 60%; margin: auto;text-align: center; border: 6px outset #0074A0; padding-bottom: 10px; ">{{campaign.code}}</p><br/>
+			  <font style="font-size:18px;">&nbsp;&nbsp;&nbsp;Redeem Here: &nbsp;<a href="{{campaign.url}}">{{campaign.url}}</a></font></div>
 
 	</div>
 
