Fixing up some js.

--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -2,15 +2,17 @@
 
 {% block  js_css_include %}
 	<script type="text/javascript" src="{% url static 'javascript/jquery-ui-1.8.1.custom.js' %}"></script>
-	<script type="text/javascript" src="{% url static 'javascript/jquery.ui.datepicker.js' %}"> </script>
-	<script type="text/javascript" src="{% url static 'javascript/jquery.timePicker.js' %}"> </script>
-	<script type="text/javascript" src="{% url static 'javascript/ajaxfileupload.js' %}"> </script>
-	<script type="text/javascript" src="{% url static 'javascript/jquery.uploadify.js' %}"> </script>
-	<script type="text/javascript" src="{% url static 'javascript/jquery.validate.js' %}"> </script>
+	<!--<script type="text/javascript" src="{% url static 'javascript/jquery.ui.datepicker.js' %}"> </script>-->
+	<!--<script type="text/javascript" src="{% url static 'javascript/jquery.timePicker.js' %}"> </script>-->
+	<!--<script type="text/javascript" src="{% url static 'javascript/ajaxfileupload.js' %}"> </script>-->
+	<!--<script type="text/javascript" src="{% url static 'javascript/jquery.uploadify.js' %}"> </script>-->
+
+	<!--<script type="text/javascript" src="{% url static 'javascript/jquery.validate.js' %}"> </script>-->
+
 	<script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}"> </script>
         <script type="text/javascript" src="{% url static 'javascript/jquery.cookie.js' %}" ></script>
         <script type="text/javascript" src="{% url static 'javascript/charCount.js' %}" ></script>
-<script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
+        <script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
 
 	<link rel="stylesheet" href="{% url static 'css/calendar-system.css' %}" type="text/css" />
 	<link rel="stylesheet" href="{% url static 'css/calendar-en.css' %}" type="text/css" />
