--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -210,7 +210,7 @@ $("#badge").overlay({
 		opacity: 0.8
 	},
 	onLoad: function(event) {
-alert("called");
+//alert("called");
 		// if twitter user logged in, show twitter page
 		{% if user and overlayTwitter %}
 		contentView = 2;
