Fixing some thigns up.

--- a/core/templates/site_base.html
+++ b/core/templates/site_base.html
@@ -9,7 +9,7 @@
     <!--<script type="text/javascript" src="{% url static 'javascript/jquery.tabSlideOut.v1.3.js' %}" ></script>-->
     <script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}" ></script>
     <script type="text/javascript" src="{% url static 'javascript/jquery.validate.js' %}" ></script>
-    <script type="text/javascript" src="{% url static 'javascript/jquery.tools.min.js' %}" ></script>
+    <!--<script type="text/javascript" src="{% url static 'javascript/jquery.tools.min.js' %}" ></script>-->
     <link rel="stylesheet" type="text/css" href="{% url static 'css/top-site-base.css' %}" />    
 	{% block  js_css_include %}
 	{% endblock %}
