--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -6,7 +6,8 @@
         <script type="text/javascript" src="{% url static 'javascript/jquery.cookie.js' %}" ></script>
         <script type="text/javascript" src="{% url static 'javascript/charCount.js' %}" ></script>
         <script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
-<!--   <script type="text/javascript" src="{% url static 'javascript/overlay.js' %}" ></script>-->
+        <script type="text/javascript" src="{% url static 'javascript/overlay.js' %}" ></script>
+        <script type="text/javascript" src="{% url static 'javascript/toolbox.expose.js' %}" ></script>
 
         <!--	<link type="text/css" href="{% url static 'css/jquery-ui-1.8.1.custom.css' %}" rel="stylesheet" />-->
        <link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
@@ -261,7 +262,6 @@ $("#badge").overlay({
 		{% endif %}
 	},
 	top: 170,
-	left: 250,
 });
 
 $('#facebook-profile-image').click(function(){
